# tidypandas

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
tidypandas/: __init__.py  grouping.py  random_df.py  read.py  utils.py
tidypandas/tests/: test_grouping.py  test_read.py  test_utils.py
